--- a/DS_final_1225/.classpath
+++ b/DS_final_1225/.classpath
@@ -6,6 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Java/jsoup-1.16.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alex9/eclipse-workspace/jsoup-1.17.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
